WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212124
REGRESSION (
r258919
): fast/events/ios/key-events-comprehensive/key-events-control tests are failing
https://bugs.webkit.org/show_bug.cgi?id=212124
Summary
REGRESSION (r258919): fast/events/ios/key-events-comprehensive/key-events-con...
Wenson Hsieh
Reported
2020-05-19 21:50:36 PDT
<
rdar://problem/60893744
>
Attachments
Patch
(2.45 KB, patch)
2020-05-19 22:12 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-05-19 22:12:00 PDT
Created
attachment 399808
[details]
Patch
EWS
Comment 2
2020-05-19 22:44:33 PDT
Committed
r261906
: <
https://trac.webkit.org/changeset/261906
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399808
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug